# open-argondb

./: README.md  index.html  pyproject.toml
benchmarks/: run_sample.py
src/open_arangodb/: __init__.py  core.py
src/open_arangodb/audit/: logger.py
src/open_arangodb/auth/: __init__.py  ldap_auth.py
src/open_arangodb/backup/: __init__.py  manager.py  snapshot.py
src/open_arangodb/cdc/: engine.py
src/open_arangodb/encryption/: __init__.py  validator.py
src/open_arangodb/events/: bus.py
src/open_arangodb/graph/: __init__.py  manager.py  parallel.py
src/open_arangodb/mcp/: __init__.py  server.py
src/open_arangodb/replication/: __init__.py  engine.py
src/open_arangodb/retrieval/: __init__.py  fusion.py  orchestrator.py
src/open_arangodb/retrieval/layers/: __init__.py  exact.py  semantic.py  tag.py  temporal.py
src/open_arangodb/satellite/: __init__.py  cache.py
src/open_arangodb/scoping/: manager.py
src/open_arangodb/store/: document_store.py
src/open_arangodb/temporal/: __init__.py  engine.py
src/open_arangodb/vector/: search.py
src/open_argondb/: __init__.py  core.py  models.py
src/open_argondb/audit/: logger.py
src/open_argondb/auth/: __init__.py  ldap_auth.py
src/open_argondb/backup/: __init__.py  manager.py  snapshot.py
src/open_argondb/cdc/: engine.py
src/open_argondb/encryption/: __init__.py  validator.py
src/open_argondb/events/: bus.py
src/open_argondb/graph/: __init__.py  manager.py  parallel.py
src/open_argondb/mcp/: __init__.py  server.py
src/open_argondb/replication/: __init__.py  engine.py
src/open_argondb/retrieval/: __init__.py  fusion.py  orchestrator.py
src/open_argondb/retrieval/layers/: __init__.py  exact.py  semantic.py  tag.py  temporal.py
src/open_argondb/satellite/: __init__.py  cache.py
src/open_argondb/store/: document_store.py
src/open_argondb/temporal/: __init__.py  engine.py
tests/: conftest.py  test_core.py  test_integration.py  test_vs_memwright.py
tests/audit/: test_logger.py
tests/auth/: test_ldap_auth.py
tests/backup/: test_manager.py  test_snapshot.py
tests/cdc/: test_engine.py
tests/encryption/: test_validator.py
tests/events/: test_bus.py
tests/graph/: test_manager.py  test_parallel.py
tests/mcp/: test_server.py
tests/replication/: test_engine.py
tests/retrieval/: test_exact.py  test_fusion.py  test_orchestrator.py  test_semantic.py  test_tag.py  test_temporal.py
tests/satellite/: test_cache.py
tests/scoping/: test_manager.py
tests/store/: test_document_store.py
tests/temporal/: test_engine.py
tests/vector/: test_search.py
